<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:layout_margin="10dp">

  <LinearLayout
    android:id="@+id/llListNameContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/tvListTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title"
      android:textSize="16sp"
      android:paddingEnd="2dp" />

    <TextView
      android:id="@+id/tvListFirst"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/first_name"
      android:textSize="16sp"
      android:paddingEnd="2dp"/>

    <TextView
      android:id="@+id/tvListLast"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/last_name"
      android:textSize="16sp" />

  </LinearLayout>

    <TextView
      android:id="@+id/tvListNat"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/nationality"
      android:textStyle="bold"/>

    <TextView
      android:id="@+id/tvListGender"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/gender"
      android:textStyle="italic"/>

</LinearLayout>